--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,5 +1,5 @@
 # github repository actions 페이지에 나타날 이름
-name: CD
+name: Artview CI/CD with Gradle
 
 # on : 해당 workflow를 실행시키는 이벤트를 정의
 # main 브랜치에 push,pr 이벤트가 발생했을 때 workflow가 실행되도록 정의
@@ -12,23 +12,20 @@ on:
 permissions:
   contents: read
 
-#해당 Workflow의 하나 이상의 job 목록
 jobs:
-  # Jot이름으로,build라는 이름의 Job이 표시
   build:
-    # runs-on : 어떤 호스트에서 실행될지 정의 - ubuntu 가상 머신에서 실행 되도록 정의
+
     runs-on: ubuntu-latest
+
     steps:
-      # jdk setting - github actions에서 사용할 JDK 설정 (프로젝트나 AWS의 java 버전과 달라도 무방)
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: 🧁 Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # gradle caching - 빌드 시간 향상
-      - name: 🧁 Gradle Caching
+      - name: 🧁 Gradle Caching - 빌드 시간 향상
         uses: actions/cache@v3
         with:
           path: |
@@ -38,23 +35,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: 🧁 application.yml 파일을 생성 합니다.
-        run: |
-          cd ./src/main/resources
-          touch ./application.yml
-        # github actions에서 설정한 값을 application.yml 파일에 쓰기
-          echo "${{ secrets.APPLICATION }}" > ./application.yml
-        shell: bash
-
-      # Gradle을 사용하여 프로젝트를 빌드
       - name: 🧁 gradle build를 위한 권한을 부여합니다.
         run: chmod +x gradlew
 
       - name: 🧁 gradle build 중입니다.
-        run: ./gradlew build
-        shell: bash # ci는 여기까지
+        run: ./gradlew build -x test #여기까지가 CI
 
       # Docker에 로그인, docker image를 빌드하고 Docker Hub로 푸시
       - name: 🧁 docker image build 후 docker hub에 push합니다.
