--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,17 +39,17 @@ jobs:
         run: chmod +x gradlew
 
       - name: 🧁 gradle build 중입니다.
-        run: ./gradlew build -x test #여기까지가 CI
+        run: ./gradlew build -x test
 
       # Docker에 로그인, docker image를 빌드하고 Docker Hub로 푸시
       - name: 🧁 docker image build 후 docker hub에 push합니다.
         run: |
         # docker에 로그인
-           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+              docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         # 이미지 생성
-           docker build -f Dockerfile -t ${{ secrets.DOCKER_REPOSITORY }}/${{ secrets.DOCKER_IMAGE }} .
+               docker build -f Dockerfile -t ${{ secrets.DOCKER_REPOSITORY }}/${{ secrets.DOCKER_IMAGE }} .
         # docker hub에 이미지 push
-           docker push ${{ secrets.DOCKER_REPOSITORY }}/${{ secrets.DOCKER_IMAGE }}
+               docker push ${{ secrets.DOCKER_REPOSITORY }}/${{ secrets.DOCKER_IMAGE }}
 
       # Deploy에서 ssh-action을 이용해 원격으로 EC2에 명령어 입력
       - name: 🧁 docker hub에서 pull 후 deploy합니다.
