--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,6 +25,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: 🧁 application.yml 파일을 생성 합니다.
+        run: |
+          touch ./src/main/resources/application.yml
+          echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.yml
+
       - name: 🧁 Gradle Caching - 빌드 시간 향상
         uses: actions/cache@v3
         with:
