--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	// security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 	//S3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
@@ -45,8 +45,11 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.assertj:assertj-core:3.19.0'
 
+	//mysql
 	implementation 'mysql:mysql-connector-java:8.0.33'
 
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 }
 
 tasks.named('test') {
