--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,15 @@ dependencies {
 
 	//assertj
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	testImplementation 'org.assertj:assertj-core:3.19.0'
 
 	//mysql
 	implementation 'mysql:mysql-connector-java:8.0.33'
 
 	//jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
